--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,5 @@ edition = "2021"
 [dependencies]
 gpui = { git = "https://github.com/zed-industries/zed" }
 id3 = "1.12.0"
+image = "0.23"
 rodio = "0.17.3"
