--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,5 +10,7 @@ dotenv = "0.15.0"
 gpui = { git = "https://github.com/zed-industries/zed" }
 id3 = "1.12.0"
 image = "0.23"
-reqwest = { version = "0.11.24", features = ["json"] }
+md5 = "0.7.0"
+querystring = "1.1.0"
+reqwest = { version = "0.11.24", features = ["json", "blocking"] }
 rodio = "0.17.3"
