--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ md5 = "0.7.0"
 querystring = "1.1.0"
 reqwest = { version = "0.11.24", features = ["json", "blocking"] }
 rodio = "0.17.3"
+turbosql = "0.10.0"
