readme and licence

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,8 +2,8 @@
 name = "kallax"
 version = "0.1.0"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+license = "GPL-3.0"
+repository = "https://github.com/Ben-Wormald/kallax"
 
 [dependencies]
 dotenv = "0.15.0"
