--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ querystring = "1.1.0"
 reqwest = { version = "0.11.24", features = ["json", "blocking"] }
 rodio = "0.20"
 turbosql = "0.10.0"
+uuid = { version = "1.11.0", features = ["v4"] }
