--- a/migrations.toml
+++ b/migrations.toml
@@ -29,6 +29,7 @@ migrations_append_only = [
     "ALTER TABLE dbsearch ADD COLUMN id TEXT NOT NULL DEFAULT ''",
     "ALTER TABLE dbplaylist ADD COLUMN id TEXT NOT NULL DEFAULT ''",
     "ALTER TABLE dbplaylist ADD COLUMN entity_ids TEXT NOT NULL DEFAULT ''",
+    "ALTER TABLE dbalbum ADD COLUMN track_ids TEXT NOT NULL DEFAULT ''",
 ]
 output_generated_schema_for_your_information_do_not_edit = """
   CREATE TABLE _turbosql_migrations (
@@ -40,7 +41,8 @@ output_generated_schema_for_your_information_do_not_edit = """
     title TEXT NOT NULL DEFAULT '',
     sort_title TEXT,
     artist_id TEXT NOT NULL DEFAULT '',
-    artwork BLOB
+    artwork BLOB,
+    track_ids TEXT NOT NULL DEFAULT ''
   ) STRICT
   CREATE TABLE dbartist (
     rowid INTEGER PRIMARY KEY,
@@ -99,6 +101,11 @@ sql_type = "TEXT NOT NULL"
 name = "artwork"
 rust_type = "Option < Vec < u8 > >"
 sql_type = "BLOB"
+
+[[output_generated_tables_do_not_edit.dbalbum.columns]]
+name = "track_ids"
+rust_type = "Vec < String >"
+sql_type = "TEXT NOT NULL"
 
 [output_generated_tables_do_not_edit.dbartist]
 name = "dbartist"
