update to gpui crate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ repository = "https://github.com/Ben-Wormald/kallax"
 
 [dependencies]
 dotenv = "0.15.0"
-gpui = { git = "https://github.com/zed-industries/zed" }
+gpui = "0.2.0"
 id3 = "1.12.0"
 image = "0.25"
 md5 = "0.7.0"
