mac media player wip

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,10 @@ gpui = "0.2.0"
 id3 = "1.12.0"
 image = "0.25"
 md5 = "0.7.0"
+objc2 = "0.6"
+objc2-avf-audio = "0.3.2"
+objc2-foundation = "0.3"
+objc2-media-player = "0.3"
 querystring = "1.1.0"
 reqwest = { version = "0.11.24", features = ["json", "blocking"] }
 rodio = "0.20"
